# project-evaluator-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TECHNICAL_FRAMEWORK.md  VSCODE_SETUP.md  pyproject.toml  requirements.txt  setup_vscode.py  test_client.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
CodeEvaluation/: code_mcp_server.py  code_streamlit_app.py  requirements_mcp.txt
InnovationNovelty/: innovation_mcp_client.py  innovation_streamlit_app.py  mcp_server.py
Patentability/: ip_mcp_client.py  ip_mcp_server.py  requirements.txt  streamlit_ip_app.py
ProblemSoln/: ps_app.py  ps_mcp_server.py
UnifiedDashboard/: unified_app.py
examples/: basic_usage.py
src/project_evaluator_mcp/: __init__.py  server.py
