[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-evaluator-mcp"
version = "1.0.0"
description = "MCP Server for Project Innovation and Novelty Evaluation using Perplexity AI"
authors = [
    {name = "Ayush Walunj", email = "ayushwalunj1@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "asyncio-compat>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/ayushwalunj1101/project-evaluator-mcp"
Repository = "https://github.com/ayushwalunj1101/project-evaluator-mcp"

[project.scripts]
project-evaluator-mcp = "project_evaluator_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
